--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,39 @@
 // Navigation code here
+
+.navigation {
+  background-color: @nav-bg;
+  border: 1px solid @nav-border;
+  
+  nav {
+    .go-flex;
+    flex-direction: column;
+    .nav-formatting;
+    padding: 5px 0;
+    color: @nav-font;
+
+    h1 {
+      .go-flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
+    .nav-items {
+      .go-flex;
+      width: 50%;
+      justify-content: space-around;
+      align-items: baseline;
+
+      a {
+        text-decoration: none;
+        font-size: 1.8rem;
+        margin: 0 .5em;
+        color: inherit;
+
+        &:hover {
+          color: @waterloo;
+        }
+      }
+    }
+  }
+}
