used parameteric mixin to style the sign-up button

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -63,6 +63,13 @@
       }
 
       .btn {
+        .signup-button(@btn-bg-color, @sea-shell);
+
+        &:hover {
+          background-color: @sea-shell;
+          color: @btn-bg-color;
+          border: 1px solid @shuttle-gray;
+        }
       }
     }
 
