--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,3 +8,16 @@
   justify-content: center;
   align-items: center;
 }
+
+.signup-button(@bg-color, @text-color) {
+  width: 30%;
+  font-size: 1.8rem;
+  padding: .5em 0;
+  text-align: center;
+  border: none;
+  outline: none;
+  border-radius: .5em;
+  background-color: @bg-color;
+  color: @text-color;
+  cursor: pointer;
+}
