--- a/less/navigation.less
+++ b/less/navigation.less
@@ -24,6 +24,10 @@
       justify-content: space-around;
       align-items: baseline;
 
+      @media @phone {
+        width: 98%;
+      }
+
       a {
         text-decoration: none;
         font-size: 1.8rem;
