--- a/less/global.less
+++ b/less/global.less
@@ -37,5 +37,11 @@ p {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;  
+
+  @media @phone {
+    width: 98%;
+    margin: 0 1%;
+  }
+  
 }
 
