--- a/less/home-page.less
+++ b/less/home-page.less
@@ -24,11 +24,24 @@
     flex-wrap: wrap;
     width: 100%;
 
+    @media @phone {
+      .sky {
+        display: none;
+      }
+      .launch {
+        display: none;
+      }
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone {
+        width: 95%;
+      }
     }
   }
 
@@ -51,8 +64,19 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      margin-top: 30px;
+      padding: 20px 0;
+      flex-direction: column-reverse;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+        margin-top: 20px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -65,6 +89,10 @@
       .btn {
         .signup-button(@btn-bg-color, @sea-shell);
 
+        @media @phone {
+          width: 100%;
+        }
+
         &:hover {
           background-color: @sea-shell;
           color: @btn-bg-color;
@@ -76,6 +104,11 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin-left: 0;
+      }
       
       img {
         width: 100%;
