added animation to the main-header text content

--- a/less/global.less
+++ b/less/global.less
@@ -42,6 +42,17 @@ p {
     width: 98%;
     margin: 0 1%;
   }
-  
+
 }
 
+@keyframes slidein {
+  from {
+    margin-left: -100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
