--- a/less/mixins.less
+++ b/less/mixins.less
@@ -21,3 +21,8 @@
   color: @text-color;
   cursor: pointer;
 }
+
+.animate-text(@name, @duration) {
+  animation-duration: @duration;
+  animation-name: @name;
+}
